--- a/ChartInMVC/ChartInMVC/ChartInMVC.csproj
+++ b/ChartInMVC/ChartInMVC/ChartInMVC.csproj
@@ -201,6 +201,7 @@
     <Compile Include="Controllers\CountryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Controllers\StateController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -318,6 +319,8 @@
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\State\ViewState.cshtml" />
     <Content Include="Views\State\AddState.cshtml" />
+    <Content Include="Views\Product\ViewProduct.cshtml" />
+    <Content Include="Views\Product\AddProduct.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
