--- a/ChartInMVC/ChartInMVC/ChartInMVC.csproj
+++ b/ChartInMVC/ChartInMVC/ChartInMVC.csproj
@@ -212,13 +212,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201808092021488_init.cs" />
-    <Compile Include="Migrations\201808092021488_init.Designer.cs">
-      <DependentUpon>201808092021488_init.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201808101803395_updateSale.cs" />
-    <Compile Include="Migrations\201808101803395_updateSale.Designer.cs">
-      <DependentUpon>201808101803395_updateSale.cs</DependentUpon>
+    <Compile Include="Migrations\201808102225504_updatever1.1.cs" />
+    <Compile Include="Migrations\201808102225504_updatever1.1.Designer.cs">
+      <DependentUpon>201808102225504_updatever1.1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -226,10 +222,13 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Product.cs" />
+    <Compile Include="Models\ProductViewModel.cs" />
     <Compile Include="Models\Sale.cs" />
     <Compile Include="Models\SaleViewModel.cs" />
     <Compile Include="Models\State.cs" />
+    <Compile Include="Models\StateViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\ChartCon.cs" />
     <Compile Include="Repository\IChart.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -347,18 +346,15 @@
     <None Include="Project_Readme.html" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201808092021488_init.resx">
-      <DependentUpon>201808092021488_init.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201808101803395_updateSale.resx">
-      <DependentUpon>201808101803395_updateSale.cs</DependentUpon>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
     <TypeScriptCompile Include="Scripts\index.d.ts" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201808102225504_updatever1.1.resx">
+      <DependentUpon>201808102225504_updatever1.1.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
