--- a/ChartInMVC/ChartInMVC/Web.config
+++ b/ChartInMVC/ChartInMVC/Web.config
@@ -9,8 +9,12 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ChartInMVC-20180810015524.mdf;Initial Catalog=aspnet-ChartInMVC-20180810015524;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ChartInMVC-20180810015524.mdf;Initial Catalog=aspnet-ChartInMVC-20180810015524;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+  
+  <add name="DefaultConnection" connectionString="Data Source=DESKTOP-9AMP9V9;Initial Catalog=aspnet-ChartInMVC-20180810015524;Integrated Security=True" providerName="System.Data.SqlClient" />
+  
+    
+    </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
